Fix: naming mistake, changed "text" to "content"

--- a/app/views/entries/new.haml
+++ b/app/views/entries/new.haml
@@ -6,9 +6,9 @@
     %br/
     = form.text_field :title
   %p
-    = form.label :text
+    = form.label :content
     %br/
-    =form.text_area :text
+    =form.text_area :content
   %p
     = form.submit
 
