--- a/app/views/entries/index.haml
+++ b/app/views/entries/index.haml
@@ -3,6 +3,8 @@
     - @entries.each do |entry|
       %li
         = link_to "#{entry.id}. #{entry.title}", entry_path(entry)
+        |
+        = link_to "[Edit]", edit_entry_path(entry)
 
 - content_for(:title) do
   List of Entries
