--- a/app/views/entries/index.haml
+++ b/app/views/entries/index.haml
@@ -5,6 +5,10 @@
         = link_to "#{entry.id}. #{entry.title}", entry_path(entry)
         |
         = link_to "[Edit]", edit_entry_path(entry)
+        |
+        = link_to "[Delete]", entry_path(entry),
+          method: :delete,
+          data: { confirm: "Do you want to delete entry no. #{entry.id}?" }
 
 - content_for(:title) do
   List of Entries
