--- a/app/views/entries/new.haml
+++ b/app/views/entries/new.haml
@@ -1,6 +1,17 @@
 %h1 New entry
 
 = form_with scope: :entry, url: entries_path, local: true do |form|
+
+  - if @entry.errors.any?
+    #error_explanation
+      %h2
+        = pluralize(@entry.errors.count, "error")
+        prohibited
+        this entry from being saved:
+      %ul
+        - @entry.errors.full_messages.each do |msg|
+          %li= msg
+
   %p
     = form.label :title
     %br/
