Added complex navigation between views

--- a/app/views/entries/edit.haml
+++ b/app/views/entries/edit.haml
@@ -23,5 +23,10 @@
   %p
     = form.submit
 
+%p
+  = link_to "Entries List", entries_path
+%p
+  = link_to "Main Menu", journal_path
+
 - content_for(:title) do
   Edit Entry
