--- a/app/views/entries/index.haml
+++ b/app/views/entries/index.haml
@@ -10,5 +10,10 @@
           method: :delete,
           data: { confirm: "Do you want to delete entry no. #{entry.id}?" }
 
+  %p
+    = link_to 'Add entry', new_entry_path
+  %p
+    = link_to "Main Menu", journal_path
+
 - content_for(:title) do
   List of Entries
