--- a/app/assets/stylesheets/journal.scss
+++ b/app/assets/stylesheets/journal.scss
@@ -29,6 +29,20 @@ body {
   overflow-y: hidden;
 }
 
+.entries-wrapper__temp {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  position: relative;
+  width: 40%;
+  height: 90vh;
+  background-image: image_url("page.jpg");
+  background-repeat: no-repeat;
+  background-size: contain;
+  margin-top: 5vh;
+  overflow-y: hidden;
+}
+
 .main-menu {
   padding-left: 0;
   margin-top: 55vh;
@@ -77,9 +91,10 @@ body {
 
 .entry-wrapper {
   margin-top: 10vh;
-  margin-left: 6.5vw;
-  text-align: center;
+  text-align: left;
   width: inherit;
+  position: relative;
+  left: -5vw;
 }
 
 .header {
@@ -92,7 +107,6 @@ body {
 .entry-title {
   font-size: 20px;
   font-style: oblique;
-  text-align: left;
   font-weight: 600;
   margin-top: 20px;
   margin-bottom: 10px;
@@ -100,13 +114,11 @@ body {
 
 .entry-date {
   font-size: 13px;
-  text-align: left;
   color: gray;
 }
 
 .entry-content {
-  font-size: 23px;
-  text-align: left;
+  font-size: 30px;
   overflow-wrap: break-word;
   margin-bottom: 20px;
 }
