Added styling to the edit view

--- a/app/views/entries/edit.haml
+++ b/app/views/entries/edit.haml
@@ -1,32 +1,34 @@
-%h1 Edit entry
+%section.entries-wrapper__temp
+  %article.entry-wrapper
+    %h1 Edit entry
 
-= form_with(model: @entry, local: true) do |form|
+    = form_with(model: @entry, local: true) do |form|
 
-  - if @entry.errors.any?
-    #error_explanation
-      %h2
-        = pluralize(@entry.errors.count, "error")
-        prohibited
-        this entry from being saved:
-      %ul
-        - @entry.errors.full_messages.each do |msg|
-          %li= msg
+      - if @entry.errors.any?
+        #error_explanation
+          %h2
+            = pluralize(@entry.errors.count, "error")
+            prohibited
+            this entry from being saved:
+          %ul
+            - @entry.errors.full_messages.each do |msg|
+              %li= msg
 
-  %p
-    = form.label :title
-    %br/
-    = form.text_field :title
-  %p
-    = form.label :content
-    %br/
-    =form.text_area :content
-  %p
-    = form.submit
+      %p
+        = form.label :title
+        %br/
+        = form.text_field :title
+      %p
+        = form.label :content
+        %br/
+        =form.text_area :content
+      %p
+        = form.submit
 
-%p
-  = link_to "Entries List", entries_path
-%p
-  = link_to "Main Menu", root_path
+    %p
+      = link_to "Entries List", entries_path, class: 'entries-menu__item-link'
+    %p
+      = link_to "Main Menu", journal_path, class: 'entries-menu__item-link'
 
-- content_for(:title) do
-  Edit Entry
+    - content_for(:title) do
+      Edit Entry
