--- a/app/assets/stylesheets/journal.scss
+++ b/app/assets/stylesheets/journal.scss
@@ -33,13 +33,12 @@ body {
   display: flex;
   flex-direction: column;
   align-items: center;
-  position: relative;
-  width: 40%;
   height: 90vh;
   background-image: image_url("page.jpg");
   background-repeat: no-repeat;
+  background-position-x: center;
+  background-position-y: center;
   background-size: contain;
-  margin-top: 5vh;
   overflow-y: hidden;
 }
 
@@ -92,9 +91,8 @@ body {
 .entry-wrapper {
   margin-top: 10vh;
   text-align: left;
-  width: inherit;
+  width: 22vw;
   position: relative;
-  left: -5vw;
 }
 
 .header {
