--- a/app/assets/stylesheets/journal.scss
+++ b/app/assets/stylesheets/journal.scss
@@ -13,7 +13,9 @@ body {
   background-image: image_url("main.jpg");
   background-repeat: no-repeat;
   background-size: contain;
+  background-position: center;
   display: flex;
+  justify-content: center;
   margin-top: 5vh;
   margin-bottom: 5vh;
   overflow-y: hidden;
@@ -45,7 +47,6 @@ body {
 .main-menu {
   padding-left: 0;
   margin-top: 55vh;
-  margin-left: 10vw;
   list-style-type: none;
   text-align: center;
 }
