Aligned vertically view, edit and add entry views with other views

--- a/app/assets/stylesheets/journal.scss
+++ b/app/assets/stylesheets/journal.scss
@@ -43,6 +43,7 @@ body {
   background-position-x: center;
   background-position-y: center;
   background-size: contain;
+  margin-top: 5vh;
   overflow-y: hidden;
 }
 
