Redesign: set root_url to Main Menu

--- a/app/views/entries/edit.haml
+++ b/app/views/entries/edit.haml
@@ -26,7 +26,7 @@
 %p
   = link_to "Entries List", entries_path
 %p
-  = link_to "Main Menu", journal_path
+  = link_to "Main Menu", root_path
 
 - content_for(:title) do
   Edit Entry
