--- a/app/views/entries/index.haml
+++ b/app/views/entries/index.haml
@@ -13,7 +13,7 @@
   %p
     = link_to 'Add entry', new_entry_path
   %p
-    = link_to "Main Menu", journal_path
+    = link_to "Main Menu", root_path
 
 - content_for(:title) do
   List of Entries
