--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -14,9 +14,9 @@
 
   %body
     %header
-    %p.notice
-      %= notice
-    %p.alert
-      %= alert
+      %p.notice
+        = notice
+      %p.alert
+        = alert
 
     = yield
