--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -19,4 +19,7 @@
       %p.alert
         = alert
 
+      - if current_user
+        = link_to "Sign Out", destroy_user_session_path, method: :delete
+
     = yield
