--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -21,5 +21,6 @@
 
       - if current_user
         = link_to "Sign Out", destroy_user_session_path, method: :delete
+        = link_to "Edit Profile", edit_user_registration_path
 
     = yield
