--- a/app/views/entries/index.haml
+++ b/app/views/entries/index.haml
@@ -14,7 +14,7 @@
     %p
       = link_to 'Add entry', new_entry_path, class: 'entries-menu__item-link'
     %p
-      = link_to "Main Menu", journal_path, class: 'entries-menu__item-link'
+      = link_to "Main Menu", root_path, class: 'entries-menu__item-link'
 
 - content_for(:title) do
   List of Entries
