--- a/app/views/entries/new.haml
+++ b/app/views/entries/new.haml
@@ -28,7 +28,7 @@
     %p
       = link_to "Entries List", entries_path, class: 'entries-menu__item-link'
     %p
-      = link_to "Main Menu", journal_path, class: 'entries-menu__item-link'
+      = link_to "Main Menu", root_path, class: 'entries-menu__item-link'
 
     - content_for(:title) do
       New Entry
