--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -20,7 +20,9 @@
         = alert
 
       - if current_user
-        = link_to "Sign Out", destroy_user_session_path, method: :delete
-        = link_to "Edit Profile", edit_user_registration_path
+        %section.user-authentication-wrapper__signed_in
+          = link_to "[Sign Out]", destroy_user_session_path, method: :delete, class: 'user-authntication__sign-out'
+          |
+          = link_to "[Edit Profile]", edit_user_registration_path, class: 'user-authntication__edit-profile'
 
     = yield
