--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -13,7 +13,7 @@
     = javascript_include_tag 'application', 'data-turbolinks-track': 'reload'
 
   %body
-    %header
+    %header.notice-alert-wrapper
       %p.notice
         = notice
       %p.alert
