Realign notice and alert messages, sign out and edit profile links

--- a/app/assets/stylesheets/journal.scss
+++ b/app/assets/stylesheets/journal.scss
@@ -9,13 +9,14 @@ body {
 
 .notice-alert-wrapper {
   position: absolute;
-  right: 6vw;
+  right: 5vw;
   top: .3vh;
 }
 
 .user-authentication-wrapper__signed_in {
   position: absolute;
-  right: 6vw;
+  right: 5vw;
+  top: 5vh;
 }
 
 .user-authntication__sign-out {
