Authentication style - Edit profile page

--- a/app/assets/stylesheets/journal.scss
+++ b/app/assets/stylesheets/journal.scss
@@ -33,6 +33,12 @@ body {
   text-align: center;
 }
 
+.authentication-wrapper-global__content-edit {
+  margin-top: 10vh;
+  width: 20vw;
+  text-align: center;
+}
+
 .user-authentication-wrapper__signed-in {
   position: absolute;
   right: 5vw;
