Entry list redesign - entries enumerated in order with ordered list not entry id

--- a/app/assets/stylesheets/journal.scss
+++ b/app/assets/stylesheets/journal.scss
@@ -115,7 +115,7 @@ body {
 
 .entries-menu {
   margin-top: 9vh;
-  list-style-type: none;
+  font-size: 26px;
   text-align: left;
   overflow-wrap: break-word;
   padding-inline-start: unset;
