--- a/app/views/entries/index.haml
+++ b/app/views/entries/index.haml
@@ -1,14 +1,12 @@
 %nav.entries-menu-wrapper
-  %ul.entries-menu
+  %ol.entries-menu
     - @entries.each do |entry|
       %li
-        = link_to "#{entry.id}. #{entry.title}", entry_path(entry), class: 'entries-menu__item-link'
-        |
+        = link_to "#{entry.title}", entry_path(entry), class: 'entries-menu__item-link'
         = link_to "[Edit]", edit_entry_path(entry), class: 'entries-menu__item-link--edit'
-        |
         = link_to "[Delete]", entry_path(entry),
           method: :delete,
-          data: { confirm: "Do you want to delete entry no. #{entry.id}?" },
+          data: { confirm: "Do you want to delete entry #{@entry.title}?" },
           class: 'entries-menu__item-link--delete'
 
     %p
