--- a/app/views/entries/show.haml
+++ b/app/views/entries/show.haml
@@ -18,7 +18,7 @@
       |
       = link_to "[Delete]", entry_path(@entry),
         method: :delete,
-        data: { confirm: "Do you want to delete entry no. #{@entry.id}?" },
+        data: { confirm: "Do you want to delete entry #{@entry.title}?" },
         class: 'entries-menu__item-link--delete'
 
     %p
@@ -26,4 +26,4 @@
 
     - content_for(:title) do
       Entry
-      = @entry.id
+      = @entry.title
