Fix bug in entries list page

--- a/app/views/entries/index.haml
+++ b/app/views/entries/index.haml
@@ -6,7 +6,7 @@
         = link_to "[Edit]", edit_entry_path(entry), class: 'entries-menu__item-link--edit'
         = link_to "[Delete]", entry_path(entry),
           method: :delete,
-          data: { confirm: "Do you want to delete entry #{@entry.title}?" },
+          data: { confirm: "Do you want to delete entry #{entry.title}?" },
           class: 'entries-menu__item-link--delete'
 
     %p
