--- a/app/views/devise/registrations/edit.haml
+++ b/app/views/devise/registrations/edit.haml
@@ -34,7 +34,7 @@
     %h3 Cancel my account
     %p
       Unhappy? #{button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete}
-    = link_to "Back", :back
+    = link_to "Back", :back, class: 'entries-menu__item-link'
 
 - content_for(:title) do
   Edit account
